--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.2.2-SNAPSHOT</version>
         <relativePath/>
     </parent>
-    <groupId>com.sns.navigator</groupId>
+    <groupId>com.tool.navigator</groupId>
     <artifactId>navigator</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <name>navigator</name>
